--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,19 @@
-#grid {
-    display: inline-block;
-    border-right: 2px solid;
-    border-bottom: 2px solid;
-    line-height: 0;
-    margin: auto;
+:root {
+    --grid-cols: 2;
+    --grid-rows: 2;
 }
-.rowMember {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
+#grid {
+    background-color: grey;
+    padding: 1px 1px;
+    display: grid;
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-column-gap: 1px;
+    grid-row-gap: 1px;
+}
+.row {
+    display: flex;
+}
+.grid-item {
     background-color: white;
-    border-top: 2px solid;
-    border-left: 2px solid;
-    border-color: black;
 }
