refactored script and setup reset button functionality. minor adjustments made to styles.css for this process

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,8 @@
 }
 #grid {
     background-color: grey;
+    width: 500px;
+    height: 500px;
     padding: 1px 1px;
     display: grid;
     grid-template-columns: repeat(var(--grid-cols), 1fr);
