--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,155 @@
 :root {
     --grid-cols: 2;
     --grid-rows: 2;
+    --grid-border-width: 1px;
+    --grid-border-color: rgb(63, 63, 63);
+}
+* {
+    box-sizing: border-box;
+}
+html, body {
+    overflow-x: hidden;
+}
+body {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(61, 61, 61);
+}
+.std-font {
+    font-family: Arial, Helvetica, sans-serif;
+}
+#title {
+    color: rgb(253, 249, 243);
+    font-weight: 700;
+    font-size: 100px;
+    height: 50px;
+    position: absolute;
+    width: 100%;
+    max-width: 550px;
+    left: 50%;
+    translate: -50%;
+    margin-top: 12px;
+    text-shadow: 5px 5px black;
+}
+#title h4 {
+    font-size: 16px;
+    margin-left: 5px;
+    text-shadow: 3px 3px black;
+}
+#content-area {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    max-width: 550px;
+    margin: auto;
+}
+@media screen and (min-width: 320px) {
+    #title {
+        font-size: 55px;
+    }
+    #content-area {
+        margin-top: 90px;
+    }
+    #title h4 {
+        font-size: 16px;
+        margin-left: 15px;
+    }
+    #title h1 {
+        text-align: center;
+    }
+}
+@media screen and (min-width: 500px) {
+    #title {
+        font-size: 78px;
+    }
+    #content-area {
+        margin-top: 115px;
+    }
+    #title h4 {
+        font-size: 16px;
+        margin-left: 7px;
+    }
+}
+#sketch-menu {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100px;
+    margin: auto;
+    border: solid;
+    border-width: 1px 1px 0 1px;
+    border-radius: 20px 20px 0 0;
+    border-color: var(--grid-border-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(245, 37, 37);
+}
+#btn-reset {
+    font-size: 48px;
+    margin-left: 15px;
+    padding: 10px 10px;
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: rgb(51, 137, 250);
+    border-color: rgb(51, 137, 250);
+    color: white;
+    box-shadow: 1px 1px 1px 1px black;
+    font-weight: 600;
+}
+#btn-reset:hover {
+    background-color: rgb(28, 121, 243);
+    border-color: rgb(28, 121, 243);
+}
+#btn-reset:active {
+    transform: scale(0.95) translate(0, 2px);
+    transition: .1s;
+}
+#fill-selection {
+    display: block;
+    float: right;
+    margin-right: 25px;
+    color: white;
+    font-weight: 600;
+}
+#sketch-grid-container {
+    position: relative;
+    width: 100%;
+    margin: auto;
+}
+#sketch-grid-container:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+    background-color: white;
 }
 #grid {
-    background-color: grey;
-    width: 500px;
-    height: 500px;
-    padding: 1px 1px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-right: var(--grid-border-width) solid var(--grid-border-color);
+    border-bottom: var(--grid-border-width) solid var(--grid-border-color);
+    margin: auto;
     display: grid;
     grid-template-columns: repeat(var(--grid-cols), 1fr);
     grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-column-gap: 1px;
-    grid-row-gap: 1px;
-}
-.row {
-    display: flex;
 }
 .grid-item {
     background-color: white;
+    border-top: var(--grid-border-width) solid var(--grid-border-color);
+    border-left: var(--grid-border-width) solid var(--grid-border-color);
+}
+
+.grid-item::after {
+    border: solid;
+    position: relative;
+}
+#bottom {
+    width: 100%;
+    height: 25px;
+    border: solid;
+    border-width: 0 1px 1px 1px;
+    border-radius: 0 0 20px 20px;
+    border-color: var(--grid-border-color);
+    background-color: rgb(245, 37, 37);
 }
